--- a/app/src/main/res/layout/content_project.xml
+++ b/app/src/main/res/layout/content_project.xml
@@ -29,4 +29,15 @@
         android:layout_alignParentStart="true"
         android:layout_marginTop="29dp"
         android:id="@+id/Sacha"/>
+
+    <Button
+        android:text="Stan"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginRight="60dp"
+        android:layout_marginEnd="60dp"
+        android:id="@+id/button"/>
 </RelativeLayout>
