--- a/app/src/main/res/layout/content_project.xml
+++ b/app/src/main/res/layout/content_project.xml
@@ -21,16 +21,6 @@
         android:id="@+id/textView2"/>
 
     <Button
-        android:text="Sacha"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textView2"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="29dp"
-        android:id="@+id/Sacha"/>
-
-    <Button
         android:text="Stan"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -40,4 +30,14 @@
         android:layout_marginRight="60dp"
         android:layout_marginEnd="60dp"
         android:id="@+id/button"/>
+
+    <Button
+        android:text="Sacha"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="29dp"
+        android:id="@+id/Sacha"
+        android:layout_below="@+id/textView2"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"/>
 </RelativeLayout>
