--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#4d63e6</color>
     <color name="colorPrimaryDark">#394dd1</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="colorForeground">#ffffff</color>
 </resources>
