--- a/app/src/main/res/drawable/background_fragment.xml
+++ b/app/src/main/res/drawable/background_fragment.xml
@@ -3,7 +3,7 @@
        android:shape="rectangle" >
 
     <corners android:radius="10dp" />
-    <solid android:color="@android:color/white"/>
+    <solid android:color="@color/colorPrimary"/>
     <stroke
         android:width="1dp"
         android:color="#FF000000" />
