--- a/app/src/main/res/layout/fragment_audio_chooser.xml
+++ b/app/src/main/res/layout/fragment_audio_chooser.xml
@@ -6,7 +6,7 @@
               tools:context="com.sunflower.catchtherainbow.Views.AudioChooserFragment">
 
     <LinearLayout
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/MainLayout"
@@ -16,7 +16,8 @@
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="0dp"
+            android:layout_weight="1">
 
             <SearchView
                 android:layout_width="match_parent"
@@ -30,23 +31,33 @@
 
         </LinearLayout>
 
-        <Button
-            android:text="@string/conformation"
+        <LinearLayout
+            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:onClick="onClick"
-            android:id="@+id/bOk"
-            android:background="@drawable/background_button"
-            android:layout_height="45dp"
-            android:gravity="center"/>
+            android:layout_height="50dp">
 
-        <Button
-                    android:text="@string/deny"
-                    android:layout_width="match_parent"
-                    android:onClick="onClick"
-                    android:id="@+id/bCancel"
-                    android:background="@drawable/background_button"
-                    android:layout_height="45dp"
-                    android:gravity="center"/>
+            <Button
+                android:text="@string/conformation"
+                android:layout_width="wrap_content"
+                android:onClick="onClick"
+                android:id="@+id/bOk"
+                android:background="@drawable/background_button"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:layout_weight="1"
+                android:layout_margin="2dp"/>
+
+            <Button
+                android:text="@string/deny"
+                android:layout_width="wrap_content"
+                android:onClick="onClick"
+                android:id="@+id/bCancel"
+                android:background="@drawable/background_button"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:layout_weight="1"
+                android:layout_margin="2dp"/>
+        </LinearLayout>
 
     </LinearLayout>
 
