--- a/app/src/main/res/drawable/background_button.xml
+++ b/app/src/main/res/drawable/background_button.xml
@@ -3,10 +3,10 @@
        android:shape="rectangle" >
 
     <corners android:radius="3dp" />
-    <solid android:color="#ff1871"/>
+    <solid android:color="@color/buttonOkAndCancel"/>
     <stroke
         android:width="1dp"
-        android:color="#FF000000" />
+        android:color="@color/strokeView"/>
     <padding
         android:bottom="15dp"
         android:left="15dp"
