--- a/app/src/main/res/drawable/background_textview.xml
+++ b/app/src/main/res/drawable/background_textview.xml
@@ -2,14 +2,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
        android:shape="rectangle" >
 
-    <corners android:radius="10dp" />
-    <solid android:color="@color/colorPrimary"/>
+    <corners android:radius="3dp" />
+    <solid android:color="@color/backgroundTextView"/>
     <stroke
         android:width="1dp"
         android:color="@color/strokeView" />
-    <padding
-        android:bottom="15dp"
-        android:left="15dp"
-        android:right="15dp"
-        android:top="15dp" />
+
 </shape>
