--- a/app/src/main/res/layout/fragment_audio_chooser.xml
+++ b/app/src/main/res/layout/fragment_audio_chooser.xml
@@ -13,51 +13,101 @@
         android:background="@drawable/background_fragment"
         android:layout_margin="5dp">
 
-        <LinearLayout
-            android:orientation="vertical"
+        <TabHost
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1">
+            android:layout_height="match_parent"
+            android:animateLayoutChanges="true"
+            >
 
-            <SearchView
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-            </SearchView>
-
-            <ListView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="50dp">
-
-            <Button
-                android:text="@string/conformation"
-                android:layout_width="wrap_content"
-                android:onClick="onClick"
-                android:id="@+id/bOk"
-                android:background="@drawable/background_button"
                 android:layout_height="match_parent"
-                android:gravity="center"
-                android:layout_weight="1"
-                android:layout_margin="2dp"/>
+                android:orientation="vertical">
 
-            <Button
-                android:text="@string/deny"
-                android:layout_width="wrap_content"
-                android:onClick="onClick"
-                android:id="@+id/bCancel"
-                android:background="@drawable/background_button"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:layout_weight="1"
-                android:layout_margin="2dp"/>
-        </LinearLayout>
+                <TabWidget
+                    android:id="@android:id/tabs"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:animateLayoutChanges="false"/>
+
+                <FrameLayout
+                    android:id="@android:id/tabcontent"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <LinearLayout
+                        android:id="@+id/Musics"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical">
+
+                        <LinearLayout
+                            android:orientation="vertical"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1">
+
+                            <SearchView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:background="@drawable/background_textview"
+                                android:layout_marginTop="5dp">
+
+                            </SearchView>
+
+                            <ListView
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:layout_marginTop="5dp"/>
+
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:orientation="horizontal"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1">
+
+                            <Button
+                                android:text="@string/conformation"
+                                android:layout_width="wrap_content"
+                                android:onClick="onClick"
+                                android:id="@+id/bOk"
+                                android:background="@drawable/background_button"
+                                android:layout_height="match_parent"
+                                android:gravity="center"
+                                android:layout_weight="1"
+                                android:layout_marginRight="5dp"
+                                android:layout_marginTop="5dp"
+                                android:textColor="@color/colorForeground"
+                                android:textSize="16sp"/>
+
+                            <Button
+                                android:text="@string/deny"
+                                android:layout_width="wrap_content"
+                                android:onClick="onClick"
+                                android:id="@+id/bCancel"
+                                android:background="@drawable/background_button"
+                                android:layout_height="match_parent"
+                                android:gravity="center"
+                                android:layout_weight="1"
+                                android:layout_marginTop="5dp"
+                                android:textColor="@color/colorForeground"
+                                android:textSize="16sp"/>
+                        </LinearLayout>
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:id="@+id/Folders"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical">
+
+                    </LinearLayout>
+
+                </FrameLayout>
+            </LinearLayout>
+        </TabHost>
 
     </LinearLayout>
 
