--- a/app/src/main/res/layout/fragment_audio_chooser.xml
+++ b/app/src/main/res/layout/fragment_audio_chooser.xml
@@ -1,117 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:id="@+id/SuperAudioChooser"
-              tools:context="com.sunflower.catchtherainbow.Views.AudioChooserFragment">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             xmlns:app="http://schemas.android.com/apk/res-auto"
+             xmlns:tools="http://schemas.android.com/tools"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             android:background="@android:color/transparent">
 
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/MainLayout"
-        android:background="@drawable/background_fragment"
-        android:layout_margin="5dp">
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                  xmlns:app="http://schemas.android.com/apk/res-auto"
+                  xmlns:tools="http://schemas.android.com/tools"
+                  android:layout_width="match_parent"
+                  android:layout_height="match_parent"
+                  tools:context="com.sunflower.catchtherainbow.Views.AudioChooserFragment"
+                  android:orientation="vertical"
+                  android:minWidth="1000dp"
+                  android:minHeight="1000dp"
+                  android:id="@+id/SuperAudioChooser"
+                  android:background="@drawable/background_fragment"
+        >
 
-        <TabHost
+        <android.support.design.widget.TabLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:animateLayoutChanges="true"
-            >
+            android:layout_height="wrap_content"
+            android:id="@+id/tabLayout"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            app:tabMode="fixed"
+            app:tabGravity="fill"/>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
-
-                <TabWidget
-                    android:id="@android:id/tabs"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:animateLayoutChanges="false"
-                    android:orientation="horizontal"/>
-
-                <FrameLayout
-                    android:id="@android:id/tabcontent"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <LinearLayout
-                        android:id="@+id/AudioFiles"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical">
-
-                        <LinearLayout
-                            android:orientation="vertical"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1">
-
-                            <SearchView
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:background="@drawable/background_textview"
-                                android:layout_marginTop="5dp">
-
-                            </SearchView>
-
-                            <ListView
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:layout_marginTop="5dp"/>
-
-                        </LinearLayout>
-
-                        <LinearLayout
-                            android:orientation="horizontal"
-                            android:layout_width="match_parent"
-                            android:layout_height="50dp"
-                            >
-
-                            <Button
-                                android:text="@string/conformation"
-                                android:layout_width="wrap_content"
-                                android:onClick="onClick"
-                                android:id="@+id/bOk"
-                                android:background="@drawable/background_button"
-                                android:layout_height="match_parent"
-                                android:gravity="center"
-                                android:layout_weight="1"
-                                android:layout_marginRight="5dp"
-                                android:layout_marginTop="5dp"
-                                android:textColor="@color/colorForeground"
-                                android:textSize="16sp"/>
-
-                            <Button
-                                android:text="@string/deny"
-                                android:layout_width="wrap_content"
-                                android:onClick="onClick"
-                                android:id="@+id/bCancel"
-                                android:background="@drawable/background_button"
-                                android:layout_height="match_parent"
-                                android:gravity="center"
-                                android:layout_weight="1"
-                                android:layout_marginTop="5dp"
-                                android:textColor="@color/colorForeground"
-                                android:textSize="16sp"/>
-                        </LinearLayout>
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:id="@+id/Folders"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical">
-
-                    </LinearLayout>
-
-                </FrameLayout>
-            </LinearLayout>
-        </TabHost>
+        <android.support.v4.view.ViewPager
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/viewPager"
+            android:layout_below="@+id/tabLayout"
+            android:layout_centerHorizontal="true" />
 
     </LinearLayout>
-
-</LinearLayout>
+</FrameLayout>
