--- a/app/src/main/res/layout/child_music.xml
+++ b/app/src/main/res/layout/child_music.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.supercomputer.superlistview.CheckableListItem xmlns:android="http://schemas.android.com/apk/res/android"
+<com.sunflower.catchtherainbow.Views.CheckableListItem xmlns:android="http://schemas.android.com/apk/res/android"
                                                    xmlns:app="http://schemas.android.com/apk/res-auto"
                                                    xmlns:tools="http://schemas.android.com/tools"
                                                    android:orientation="horizontal"
@@ -20,22 +20,27 @@
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:padding="10dp"
+            android:padding="8dp"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp">
+            android:layout_margin="2dp"
+            android:paddingStart="0dp">
 
             <ImageView
-                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:id="@+id/imageView"
                 android:layout_weight="1"
-                android:src="@drawable/ic_music_note"/>
+                android:src="@drawable/ic_music_note"
+                android:scaleType="center"
+                android:layout_width="0dp"
+                android:foregroundGravity="center"
+                android:layout_gravity="center"
+                android:layout_marginStart="5dp"/>
 
             <LinearLayout
                 android:orientation="vertical"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="1">
+                android:layout_weight="5">
 
                 <TextView
                     android:id="@+id/tvName"
@@ -70,7 +75,7 @@
 
             <LinearLayout
                 android:orientation="horizontal"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:radius="10dip"
                 android:gravity="center_vertical|right"
@@ -78,10 +83,9 @@
 
                 <TextView
                     android:text="03:45"
-                    android:layout_width="match_parent"
+                    android:layout_width="50dp"
                     android:layout_height="wrap_content"
                     android:id="@+id/tvTimes"
-                    android:layout_weight="1"
                     android:layout_marginRight="5dp"
                     android:textAlignment="textEnd"/>
 
@@ -89,4 +93,4 @@
 
         </LinearLayout>
     </LinearLayout>
-</com.supercomputer.superlistview.CheckableListItem>
+</com.sunflower.catchtherainbow.Views.CheckableListItem>
