--- a/app/src/main/res/drawable/background_button.xml
+++ b/app/src/main/res/drawable/background_button.xml
@@ -3,7 +3,7 @@
        android:shape="rectangle" >
 
     <corners android:radius="3dp" />
-    <solid android:color="@color/buttonOkAndCancel"/>
+    <solid android:color="@color/backgroundButton"/>
     <stroke
         android:width="1dp"
         android:color="@color/strokeView"/>
