--- a/app/src/main/res/drawable/background_fragment.xml
+++ b/app/src/main/res/drawable/background_fragment.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
        android:shape="rectangle" >
 
-    <corners android:radius="10dp" />
-    <solid android:color="@color/colorPrimary"/>
+    <corners android:radius="7dp" />
+    <solid android:color="@color/colorPrimaryDark"/>
     <stroke
         android:width="1dp"
         android:color="@color/strokeView" />
