--- a/app/src/main/res/layout/content_project.xml
+++ b/app/src/main/res/layout/content_project.xml
@@ -41,27 +41,39 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/playPrev"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            android:background="@drawable/background_button"
+            android:textColor="@color/colorForeground"/>
 
         <Button
             android:text="Play"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/Sacha"/>
+            android:id="@+id/Sacha"
+            android:background="@drawable/background_button"
+            android:layout_marginLeft="3dp"
+            android:textColor="@color/colorForeground"
+            android:layout_weight="1"/>
 
         <Button
             android:text="Next"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/playNext"/>
-    </LinearLayout>
+            android:id="@+id/playNext"
+            android:background="@drawable/background_button"
+            android:layout_marginLeft="3dp"
+            android:textColor="@color/colorForeground"
+            android:layout_weight="1"/>
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/b_getAudio"
-        android:text="@string/getAudio"
-        android:layout_marginRight="24dp"
-        android:layout_marginEnd="24dp"/>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:id="@+id/b_getAudio"
+            android:text="@string/getAudio"
+            android:background="@drawable/background_button"
+            android:layout_marginLeft="3dp"
+            android:textColor="@color/colorForeground"
+            android:layout_weight="1"/>
+    </LinearLayout>
 
 </LinearLayout>
