--- a/app/src/main/res/layout/fragment_audio_chooser.xml
+++ b/app/src/main/res/layout/fragment_audio_chooser.xml
@@ -27,7 +27,9 @@
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             app:tabMode="fixed"
-            app:tabGravity="fill"/>
+            app:tabGravity="fill"
+            app:tabTextColor="@color/colorForegroundSecond"
+            app:tabSelectedTextColor="@color/colorAccent"/>
 
         <android.support.v4.view.ViewPager
             android:layout_width="wrap_content"
