--- a/app/src/main/res/layout/frag_tab_folders.xml
+++ b/app/src/main/res/layout/frag_tab_folders.xml
@@ -9,5 +9,6 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Large Text"
         android:id="@+id/textView"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"
+        android:textColor="@color/colorForeground"/>
 </LinearLayout>
