--- a/app/src/main/res/layout/content_project.xml
+++ b/app/src/main/res/layout/content_project.xml
@@ -7,73 +7,83 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.sunflower.catchtherainbow.ProjectActivity"
     tools:showIn="@layout/app_bar_project"
     android:background="@color/colorPrimary"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:paddingLeft="2dp"
+    android:paddingRight="2dp">
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Hello World!"
-        android:id="@+id/textView2"/>
+        android:id="@+id/audioInfoTextView"
+        android:gravity="center"
+        android:foregroundGravity="center"
+        android:textColor="@color/colorForeground"/>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1">
+
+        <view
+            android:layout_width="match_parent"
+            class="com.sunflower.catchtherainbow.Views.AudioVisualizerView"
+            android:id="@+id/audioVisualizerView"
+            android:layout_height="150dp"
+            android:layout_centerHorizontal="true"
+            android:layout_centerInParent="true"
+            android:layout_centerVertical="true"/>
+    </RelativeLayout>
 
     <com.sunflower.catchtherainbow.Views.AudioProgressView
         android:layout_width="match_parent"
         android:layout_below="@+id/Sacha"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
         android:id="@+id/audioProgressView"
-        android:layout_height="50dp"/>
+        android:layout_height="35dp"/>
 
     <LinearLayout
         android:orientation="horizontal"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        >
+        android:gravity="center">
 
         <Button
             android:text="Prev"
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/playPrev"
             android:layout_weight="1"
             android:background="@drawable/background_button"
-            android:textColor="@color/colorForeground"/>
+            android:textColor="@color/colorForeground"
+            android:layout_width="wrap_content"/>
+            android:layout_width="75dp"/>
 
         <Button
             android:text="Play"
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/Sacha"
             android:background="@drawable/background_button"
             android:layout_marginLeft="3dp"
             android:textColor="@color/colorForeground"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            android:layout_width="wrap_content"/>
+            android:id="@+id/Sacha"
+            android:layout_width="75dp"/>
 
         <Button
             android:text="Next"
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/playNext"
             android:background="@drawable/background_button"
             android:layout_marginLeft="3dp"
             android:textColor="@color/colorForeground"
-            android:layout_weight="1"/>
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:id="@+id/b_getAudio"
-            android:text="@string/getAudio"
-            android:background="@drawable/background_button"
-            android:layout_marginLeft="3dp"
-            android:textColor="@color/colorForeground"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            android:layout_width="wrap_content"/>
+            android:id="@+id/playNext"
+            android:layout_width="75dp"/>
     </LinearLayout>
-
 </LinearLayout>
