--- a/app/src/main/res/layout/frag_tab_audio_files.xml
+++ b/app/src/main/res/layout/frag_tab_audio_files.xml
@@ -13,7 +13,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/background_textview"
-            android:layout_marginTop="5dp">
+            android:layout_marginTop="8dp"
+            android:layout_margin="5dp"
+            android:layout_marginBottom="0dp"
+            >
 
         </SearchView>
 
@@ -22,14 +25,20 @@
             android:layout_height="match_parent"
             android:layout_marginTop="5dp"
             android:id="@+id/listViewAudioFiles"
-            android:background="@color/backgroundListView"/>
+            android:background="@color/backgroundListView"
+            android:layout_marginLeft="2dp"
+            android:layout_marginRight="2dp"/>
 
     </LinearLayout>
 
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="55dp">
+        android:layout_height="55dp"
+        android:layout_marginTop="0dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginBottom="5dp">
 
         <Button
             android:text="@string/conformation"
