--- a/app/src/main/res/layout/fragment_audio_chooser.xml
+++ b/app/src/main/res/layout/fragment_audio_chooser.xml
@@ -5,38 +5,32 @@
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@android:color/transparent"
+             tools:context="com.sunflower.catchtherainbow.Views.AudioChooserFragment"
     >
-
-        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                  xmlns:app="http://schemas.android.com/apk/res-auto"
-                  xmlns:tools="http://schemas.android.com/tools"
-                  android:layout_width="match_parent"
-                  android:layout_height="match_parent"
-                  tools:context="com.sunflower.catchtherainbow.Views.AudioChooserFragment"
-                  android:orientation="vertical"
-                  android:minWidth="1000dp"
-                  android:minHeight="1000dp"
-                  android:id="@+id/SuperAudioChooser"
-                  android:background="@drawable/background_fragment"
-                      android:layout_margin="10dp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:minWidth="1000dp"
+            android:minHeight="1000dp"
+            android:id="@+id/SuperAudioChooser"
+            android:background="@drawable/background_fragment"
+            android:layout_margin="10dp"
+            android:padding="0dp">
 
         <android.support.design.widget.TabLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/tabLayout"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
             app:tabMode="fixed"
             app:tabGravity="fill"
             app:tabTextColor="@color/colorForegroundSecond"
             app:tabSelectedTextColor="@color/colorAccent"/>
 
         <android.support.v4.view.ViewPager
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/viewPager"
-            android:layout_below="@+id/tabLayout"
-            android:layout_centerHorizontal="true" />
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/viewPager" />
 
     </LinearLayout>
 </FrameLayout>
