--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,15 +3,17 @@
     <color name="colorPrimary">#373645</color>
     <!--<color name="colorPrimary">#4d63e6</color>-->
     <color name="colorPrimaryDark">#252430</color>
-    <color name="colorAccent">#33439f</color>
+    <color name="colorAccent">#d3d4d6</color>
     <color name="colorForeground">#ffffff</color>
     <color name="colorForegroundSecond">#bfbdc0</color>
     <color name="buttonOkAndCancel">#373645</color>
     <color name="backgroundTextView">#bfbdc0</color>
     <color name="backgroundListView">#373645</color>
     <color name="backgroundButton">#252430</color>
-    <color name="strokeView">#33439f</color>
+    <color name="strokeView">#a9abb6</color>
     <color name="textButton">#ffffff</color>
     <color name="iconFolder">#bfbdc0</color>
     <color name="iconMusic">#bfbdc0</color>
+
+    <color name="selectedSongItem">#bfbdc0</color>
 </resources>
