--- a/app/src/main/res/layout/frag_tab_folders.xml
+++ b/app/src/main/res/layout/frag_tab_folders.xml
@@ -7,7 +7,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Large Text"
+        android:text="Great Folders"
         android:id="@+id/textView"
         android:layout_gravity="center_horizontal"
         android:textColor="@color/colorForeground"/>
