--- a/app/src/main/res/layout/child_music.xml
+++ b/app/src/main/res/layout/child_music.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.sunflower.catchtherainbow.Views.CheckableListItem xmlns:android="http://schemas.android.com/apk/res/android"
-                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
-                                                   xmlns:tools="http://schemas.android.com/tools"
-                                                   android:orientation="horizontal"
-                                                   android:layout_width="wrap_content"
-                                                   android:layout_height="wrap_content"
-                                                   android:descendantFocusability="blocksDescendants"
-                                                   android:padding="5dp">
+<com.sunflower.catchtherainbow.Views.Helpful.CheckableListItem xmlns:android="http://schemas.android.com/apk/res/android"
+                                                               xmlns:app="http://schemas.android.com/apk/res-auto"
+                                                               xmlns:tools="http://schemas.android.com/tools"
+                                                               android:orientation="horizontal"
+                                                               android:layout_width="wrap_content"
+                                                               android:layout_height="wrap_content"
+                                                               android:descendantFocusability="blocksDescendants"
+                                                               android:padding="5dp">
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                   xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -25,13 +25,14 @@
             android:padding="8dp"
             android:layout_height="wrap_content"
             android:layout_margin="2dp"
-            android:paddingStart="0dp">
+            android:paddingStart="0dp"
+            android:paddingLeft="0dp">
 
             <ImageView
                 android:layout_height="match_parent"
                 android:id="@+id/imageView"
                 android:layout_weight="1"
-                android:src="@drawable/ic_music_note"
+                app:srcCompat="@drawable/ic_music_note"
                 android:scaleType="center"
                 android:layout_width="0dp"
                 android:foregroundGravity="center"
@@ -97,4 +98,4 @@
 
         </LinearLayout>
     </LinearLayout>
-</com.sunflower.catchtherainbow.Views.CheckableListItem>
+</com.sunflower.catchtherainbow.Views.Helpful.CheckableListItem>
