--- a/app/src/main/res/layout/child_folder.xml
+++ b/app/src/main/res/layout/child_folder.xml
@@ -16,43 +16,76 @@
               android:layout_height="wrap_content"
               android:weightSum="1"
               android:orientation="vertical"
-              android:descendantFocusability="blocksDescendants">
+              android:descendantFocusability="blocksDescendants"
+              android:id="@+id/folderLayout">
 
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:padding="10dp"
+        android:padding="8dp"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:id="@+id/imageView"
-            android:layout_weight="1"
-            app:srcCompat="@drawable/ic_folder"/>
+        android:layout_margin="2dp"
+        android:paddingStart="0dp"
+        android:paddingLeft="0dp">
 
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_weight="1">
 
+            <ImageView
+                android:layout_height="match_parent"
+                android:id="@+id/imageViewFolder"
+                android:layout_weight="1"
+                app:srcCompat="@drawable/ic_folder"
+                android:scaleType="center"
+                android:layout_width="match_parent"
+                android:foregroundGravity="center"
+                android:layout_gravity="center"
+                android:layout_marginStart="0dp"/>
+
             <TextView
-                android:id="@+id/tvName"
+                android:text="68"
+                android:layout_height="wrap_content"
+                android:id="@+id/tVCountMusics"
+                android:textAlignment="textEnd"
+                android:textColor="@color/colorForeground"
+                android:textSize="14sp"
+                android:layout_weight="1"
+                android:layout_width="wrap_content"/>
+
+            <TextView
+                android:text="@string/countMusics"
+                android:layout_height="wrap_content"
+                android:textAlignment="textEnd"
+                android:textColor="@color/colorForeground"
+                android:textSize="14sp"
+                android:layout_width="wrap_content"
+                android:layout_weight="1"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="5">
+
+            <TextView
+                android:id="@+id/tvTitleFolder"
                 android:layout_alignParentLeft="true"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:focusable="false"
                 android:clickable="false"
                 android:text="Name Music"
-                android:textSize="20sp"
-                android:textColor="@android:color/black"
+                android:textSize="14sp"
+                android:textColor="@color/colorForeground"
                 android:layout_marginLeft="4dp"
                 />
 
             <TextView
-                android:id="@+id/tvPath"
+                android:id="@+id/tvPathFolder"
                 android:layout_alignParentLeft="true"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -61,37 +94,12 @@
                 android:layout_marginLeft="1dp"
                 android:layout_marginRight="0dp"
                 android:layout_marginTop="0dp"
-                android:text="/storage/78BF-1DF2"
+                android:text="Unknown Artist"
                 android:paddingLeft="5dp"
-                android:textSize="16sp"
+                android:textSize="14sp"
                 tools:textStyle="normal"
-                android:textColor="@android:color/black"
+                android:textColor="@color/colorForegroundSecond"
                 />
-        </LinearLayout>
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:radius="10dip"
-            android:gravity="center_vertical|right"
-            android:layout_weight="1">
-
-            <TextView
-                android:text="68"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/tVCountMusics"
-                android:layout_weight="1"
-                android:layout_marginRight="5dp"/>
-
-            <TextView
-                android:text="@string/countMusics"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.9"
-                android:layout_marginRight="5dp"/>
-
         </LinearLayout>
 
     </LinearLayout>
