--- a/app/src/main/res/layout/frag_tab_folders.xml
+++ b/app/src/main/res/layout/frag_tab_folders.xml
@@ -3,12 +3,93 @@
               android:orientation="vertical" android:layout_width="match_parent"
               android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Great Folders"
-        android:id="@+id/textView"
-        android:layout_gravity="center_horizontal"
-        android:textColor="@color/colorForeground"/>
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1">
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/background_textview"
+            android:paddingTop="1dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:id="@+id/tvSelected"
+                android:textAlignment="center"
+                android:textColor="@color/colorForeground"
+                android:textSize="16sp"
+                android:layout_weight="1"
+                android:paddingTop="5dp"/>
+
+            <SearchView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/background_textview"
+                android:id="@+id/searchViewFolders"
+                >
+
+            </SearchView>
+
+            <Spinner
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:id="@+id/spinnerFilter"
+                android:layout_marginRight="5dp"
+                />
+
+        </LinearLayout>
+
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="5dp"
+            android:id="@+id/listViewFolders"
+            android:background="@color/backgroundListView"
+            android:layout_marginLeft="2dp"
+            android:layout_marginRight="2dp"
+            android:layout_weight="1"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="55dp"
+        android:layout_marginTop="0dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginBottom="5dp">
+
+        <Button
+            android:text="@string/conformation"
+            android:layout_width="wrap_content"
+            android:onClick="onClick"
+            android:id="@+id/bOk"
+            android:background="@drawable/background_button"
+            android:gravity="center"
+            android:layout_weight="1"
+            android:layout_marginRight="5dp"
+            android:layout_marginTop="5dp"
+            android:textColor="@color/colorForeground"
+            android:textSize="16sp"
+            android:layout_height="wrap_content"/>
+
+        <Button
+            android:text="@string/deny"
+            android:layout_width="wrap_content"
+            android:onClick="onClick"
+            android:id="@+id/bCancel"
+            android:background="@drawable/background_button"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_weight="1"
+            android:layout_marginTop="5dp"
+            android:textColor="@color/colorForeground"
+            android:textSize="16sp"/>
+    </LinearLayout>
 </LinearLayout>
