--- a/app/src/main/res/layout/view_audio_progress.xml
+++ b/app/src/main/res/layout/view_audio_progress.xml
@@ -9,7 +9,7 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="2dp">
+        >
 
         <TextView
             android:text="00:00"
@@ -26,7 +26,8 @@
             android:layout_weight="1"
             android:paddingEnd="8dp"
             android:paddingStart="8dp"
-            android:layout_gravity="center"/>
+            android:layout_gravity="center"
+            android:theme="@style/SuperSeekBarStyle"/>
 
         <TextView
             android:text="00:00"
