--- a/app/src/main/res/layout/app_bar_project.xml
+++ b/app/src/main/res/layout/app_bar_project.xml
@@ -10,17 +10,17 @@
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay"
+        android:layout_height="wrap_content"
         >
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?android:attr/colorPrimaryDark"
+            android:background="@color/colorPrimaryDark"
             android:gravity="top|start"
-            app:popupTheme="@style/AppTheme.PopupOverlay">
+            app:popupTheme="@style/AppTheme.PopupOverlay"
+            android:layout_height="35dp">
 
             <android.support.v7.widget.ActionMenuView
                 android:id="@+id/amvMenu"
