--- a/app/src/main/res/layout/fragment_audio_chooser.xml
+++ b/app/src/main/res/layout/fragment_audio_chooser.xml
@@ -25,12 +25,14 @@
             app:tabMode="fixed"
             app:tabGravity="fill"
             app:tabTextColor="@color/colorForegroundSecond"
-            app:tabSelectedTextColor="@color/colorAccent"/>
+            app:tabSelectedTextColor="@color/colorForeground"
+            app:tabIndicatorColor="@color/colorForeground"/>
 
         <android.support.v4.view.ViewPager
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/viewPager" />
+            android:id="@+id/viewPager"
+            android:padding="1dp"/>
 
     </LinearLayout>
 </FrameLayout>
