--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,6 +4,17 @@
     <dimen name="nav_header_height">160dp</dimen>
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
-    <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="activity_vertical_margin">2dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+
+    <dimen name="text_normal">14sp</dimen>
+    <dimen name="text_small">8sp</dimen>
+
+    <!-- Audio track dimensions -->
+    <dimen name="audio_track_default_height">200dp</dimen>
+    <dimen name="audio_track_default_width">350dp</dimen>
+    <dimen name="audio_track_max_height">300dp</dimen>
+    <dimen name="audio_track_max_width">500dp</dimen>
+    <dimen name="audio_track_min_height">130dp</dimen>
+    <dimen name="audio_track_min_width">100dp</dimen>
 </resources>
