--- a/app/src/main/res/layout/child_audio.xml
+++ b/app/src/main/res/layout/child_audio.xml
@@ -6,27 +6,15 @@
                                                                android:layout_width="wrap_content"
                                                                android:layout_height="wrap_content"
                                                                android:descendantFocusability="blocksDescendants"
-                                                               android:padding="5dp">
-
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                  xmlns:app="http://schemas.android.com/apk/res-auto"
-                  xmlns:tools="http://schemas.android.com/tools"
-                  android:layout_width="fill_parent"
-                  android:layout_height="wrap_content"
-                  android:weightSum="1"
-                  android:orientation="vertical"
-                  android:descendantFocusability="blocksDescendants"
-                  android:id="@+id/musicLayout"
-                  android:background="@android:color/transparent">
-
+                                                               android:padding="5dp"
+                                                               android:id="@+id/music_layout"
+                                                               android:layout_margin="2dp">
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:padding="8dp"
             android:layout_height="wrap_content"
-            android:layout_margin="2dp"
-            android:paddingStart="0dp"
-            android:paddingLeft="0dp">
+            android:layout_margin="2dp">
 
             <ImageView
                 android:layout_height="match_parent"
@@ -47,12 +35,11 @@
 
                 <TextView
                     android:id="@+id/tvName"
-                    android:layout_alignParentLeft="true"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:focusable="false"
                     android:clickable="false"
-                    android:text="Name Music"
+                    android:text="@string/no_title"
                     android:textSize="14sp"
                     android:textColor="@color/colorForeground"
                     android:layout_marginLeft="4dp"
@@ -60,15 +47,14 @@
 
                 <TextView
                     android:id="@+id/tvArtist"
-                    android:layout_alignParentLeft="true"
-                    android:layout_width="match_parent"
+                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:focusable="false"
                     android:clickable="false"
                     android:layout_marginLeft="1dp"
                     android:layout_marginRight="0dp"
                     android:layout_marginTop="0dp"
-                    android:text="Unknown Artist"
+                    android:text="@string/unknown_artist"
                     android:paddingLeft="5dp"
                     android:textSize="14sp"
                     tools:textStyle="normal"
@@ -85,7 +71,7 @@
                 android:layout_weight="1">
 
                 <TextView
-                    android:text="03:45"
+                    android:text="00:00"
                     android:layout_width="50dp"
                     android:layout_height="wrap_content"
                     android:id="@+id/tvTimes"
@@ -95,7 +81,5 @@
                     android:textSize="14sp"/>
 
             </LinearLayout>
-
-        </LinearLayout>
     </LinearLayout>
 </com.sunflower.catchtherainbow.Views.Helpful.CheckableListItem>
