--- a/app/src/main/res/layout/child_folder.xml
+++ b/app/src/main/res/layout/child_folder.xml
@@ -1,33 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.sunflower.catchtherainbow.Views.Helpful.CheckableListItem
     xmlns:android="http://schemas.android.com/apk/res/android"
-   xmlns:app="http://schemas.android.com/apk/res-auto"
-   xmlns:tools="http://schemas.android.com/tools"
-   android:orientation="horizontal"
-   android:layout_width="wrap_content"
-   android:layout_height="wrap_content"
-   android:descendantFocusability="blocksDescendants"
-   android:padding="5dp">
-
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:weightSum="1"
-        android:orientation="vertical"
-        android:descendantFocusability="blocksDescendants"
-        android:id="@+id/folderLayout"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="horizontal"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:descendantFocusability="blocksDescendants"
+    android:padding="5dp"
+    android:layout_margin="2dp"
+    android:id="@+id/folders_layout">
 
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:padding="8dp"
             android:layout_height="wrap_content"
-            android:layout_margin="2dp"
-            android:paddingStart="0dp"
-            android:paddingLeft="0dp">
+            android:layout_margin="2dp">
 
             <LinearLayout
                 android:orientation="vertical"
@@ -40,7 +29,6 @@
                 <ImageView
                     android:layout_height="match_parent"
                     android:id="@+id/imageViewFolder"
-                    android:layout_weight="1"
                     app:srcCompat="@drawable/ic_folder"
                     android:scaleType="center"
                     android:layout_width="match_parent"
@@ -49,23 +37,21 @@
                     android:layout_marginStart="0dp"/>
 
                 <TextView
-                    android:text="68"
+                    android:text=""
                     android:layout_height="wrap_content"
                     android:id="@+id/tVCountMusics"
                     android:textAlignment="center"
                     android:textColor="@color/colorForeground"
                     android:textSize="14sp"
-                    android:layout_weight="1"
                     android:layout_width="match_parent"/>
 
                 <TextView
-                    android:text="@string/countMusics"
+                    android:text="@string/songs_count"
                     android:layout_height="wrap_content"
                     android:textAlignment="center"
                     android:textColor="@color/colorForeground"
                     android:textSize="14sp"
-                    android:layout_width="match_parent"
-                    android:layout_weight="1"/>
+                    android:layout_width="match_parent"/>
             </LinearLayout>
 
             <LinearLayout
@@ -76,12 +62,11 @@
 
                 <TextView
                     android:id="@+id/tvTitleFolder"
-                    android:layout_alignParentLeft="true"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:focusable="false"
                     android:clickable="false"
-                    android:text="Name Music"
+                    android:text="@string/folder"
                     android:textSize="14sp"
                     android:textColor="@color/colorForeground"
                     android:layout_marginLeft="4dp"
@@ -89,7 +74,6 @@
 
                 <TextView
                     android:id="@+id/tvPathFolder"
-                    android:layout_alignParentLeft="true"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:focusable="false"
@@ -97,7 +81,7 @@
                     android:layout_marginLeft="1dp"
                     android:layout_marginRight="0dp"
                     android:layout_marginTop="0dp"
-                    android:text="Unknown Artist"
+                    android:text="@string/path"
                     android:paddingLeft="5dp"
                     android:textSize="14sp"
                     tools:textStyle="normal"
@@ -106,5 +90,4 @@
             </LinearLayout>
 
         </LinearLayout>
-    </LinearLayout>
 </com.sunflower.catchtherainbow.Views.Helpful.CheckableListItem>
