--- a/app/src/main/res/layout/frag_tab_folders.xml
+++ b/app/src/main/res/layout/frag_tab_folders.xml
@@ -1,24 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical" android:layout_width="match_parent"
               android:layout_height="match_parent">
-
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1">
-
         <ListView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="5dp"
             android:id="@+id/listViewFolders"
-            android:background="@color/backgroundListView"
-            android:layout_marginLeft="2dp"
-            android:layout_marginRight="2dp"
-            android:layout_weight="1"/>
-
-    </LinearLayout>
-
-</LinearLayout>
+            android:background="@color/backgroundListView"/>
+</RelativeLayout>
